# TG01_Code

./: CMakeLists.txt  Faces Test.py  FreeCad Miner.py  FreeCad_Reader.py  Positioning Parts.py  Run Multiple Proccess.py  Teste_FreeCad.py  csv_test.py  library.cpp  library.h  refactor_data.py  teste_py.py
CGAL_Setup/: CGAL_Setup.h  CMakeLists.txt
CGAL_helpers/: CGAL_helpers.cpp  CGAL_helpers.h  CMakeLists.txt  teste.cpp
Cad_Data/: CMakeLists.txt  Cad_Data.cpp  Cad_Data.h
Genes_helpers/: CMakeLists.txt  Genes_helpers.cpp  Genes_helpers.h  test.cpp
Genetic/: CMakeLists.txt  Genetic.cpp  Genetic.h  draw_3d.py  draw_polygons.py  svg_draw_polygons.py  test.cpp
Models/Board/: Board Hexagon.FCStd  Board Square.FCStd  Board Square.FCStd1  Board Star.FCStd  Board Star.FCStd1  Model 00.FCStd  Model 00.FCStd1  Model 01.FCStd  Model 01.FCStd1  Model 02.FCStd  Model 02.FCStd1  Model 03.FCStd  Model 03.FCStd1  Model 04.FCStd  Model 04.FCStd1  Model 05.FCStd  Model 06.FCStd  Model 07.FCStd  Model 07.FCStd1  Model 08.FCStd  Model 08.FCStd1  Model 09.FCStd  Model 09.FCStd1  Model 10.FCStd  Model 10.FCStd1  Model Triangle.FCStd
Models/No Board/: Hexagons.FCStd  Hexagons.FCStd1  Mix.FCStd  Mix.FCStd1  Model 00.FCStd  Model 00.FCStd1  Model 01.FCStd  Model 02.FCStd  Model 02.FCStd1  Model 03.FCStd  Model 03.FCStd1  Model 04.FCStd  Model 04.FCStd1  Model 05.FCStd  Model 05.FCStd1  Model 06.FCStd  Model 06.FCStd1  Model 07.FCStd  Model 07.FCStd1  Model 08.FCStd  Model 08.FCStd1  Model 09.FCStd  Model 09.FCStd1  Model 10.FCStd  Model 10.FCStd1  Model01.FCStd  Non Convex.FCStd  Non Convex.FCStd1  Polygons.FCStd  Polygons.FCStd1  Rectangles.FCStd  Triangles.FCStd  Triangles.FCStd1
