PROJECT(CGAL_helpers)
SET(GCC_COVERAGE_COMPILE_FLAGS "-fPIC -Wl,--no-undefined")
SET(GCC_COVERAGE_LINK_FLAGS    "")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
add_library( CGAL_helpers CGAL_helpers.h CGAL_helpers.cpp)
#ADD_SUBDIRECTORY(../CGAL_Setup)
#target_link_libraries(Cad_Data INTERFACE ../CGAL_Setup)
target_include_directories ( CGAL_helpers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories( CGAL_helpers PUBLIC "${CGAL_Setup_SOURCE_DIR}")