PROJECT(Cad_Data)
SET(GCC_COVERAGE_COMPILE_FLAGS "-fPIC -Wl,--no-undefined")
SET(GCC_COVERAGE_LINK_FLAGS    "")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}")
add_library( Cad_Data Cad_Data.h Cad_Data.cpp)
#ADD_SUBDIRECTORY(../CGAL_Setup)
#target_link_libraries(Cad_Data INTERFACE ../CGAL_Setup)
target_include_directories ( Cad_Data PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories( Cad_Data PUBLIC "${CGAL_Setup_SOURCE_DIR}")